bank-project/backendapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-backend-deployment
  namespace: banking
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: bank-backend-deployment
  template:
    metadata:
      labels:
        app: bank-backend-deployment
    spec:
      containers:
        - name: bank-backend-container
          image: 547268988762.dkr.ecr.us-east-1.amazonaws.com/bank-backendapi:25
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 15
            failureThreshold: 5
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 180
            periodSeconds: 30
            failureThreshold: 5
            timeoutSeconds: 5
