bank-project/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-frontend-deployment
  namespace: banking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bank-frontend-deployment
  template:
    metadata:
      labels:
        app: bank-frontend-deployment
    spec:
      containers:
      - name: bank-frontend-container
        image: 547268988762.dkr.ecr.us-east-1.amazonaws.com/bank-frontend:8
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "250m"
            memory: "512Mi"
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 120
          periodSeconds: 120
