bank-project/bankend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bank-backend-service
  namespace: banking
spec:
  selector:
    app: bank-backend-deployment
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
