bank-project/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-ingress
  namespace: banking
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - bankapi.pod13fintech.online
    - bank.pod13fintech.online
    secretName: bank-pod13fintech-tls
  rules:
  - host: bank.pod13fintech.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bank-frontend-service
            port:
              number: 80
  - host: bankapi.pod13fintech.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bank-backend-service
            port:
              number: 80
